--- a/js.tip-cal/index.html
+++ b/js.tip-cal/index.html
@@ -33,7 +33,7 @@
                         <span class="box-3">
                             <p class="para-3">How Was Your Service</p>
                             <select name="value" id="value" class="service">
-                                <option value="0">Choose..</option>
+                                <option value="0" disabled selected >Choose..</option>
                                 <option value="20">Great - 20%</option>
                                 <option value="10">Good - 10%</option>
                                 <option value="2">Bad - 2%</option>
